# neural-foundry

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/devlog/: session_001.md
foundry/: __init__.py  __main__.py  cli.py
foundry/engine/: __init__.py  base.py  runner.py  state.py  tiers.py
foundry/tracks/: __init__.py
foundry/tracks/art_neural_networks/: __init__.py
foundry/tracks/art_neural_networks/missions/: __init__.py  m01_first_resonance.py  m02_signal_noise.py  m03_mappers_path.py
foundry/ui/: __init__.py  display.py
neural_foundry/: __init__.py  __main__.py  cli.py
neural_foundry/game/: __init__.py  runner.py  state.py  tiers.py
neural_foundry/missions/: __init__.py  base.py
neural_foundry/missions/apprentice/: __init__.py
neural_foundry/missions/apprentice/m01_first_resonance/: __init__.py
neural_foundry/missions/apprentice/m02_signal_noise/: __init__.py
neural_foundry/missions/apprentice/m03_mappers_path/: __init__.py
neural_foundry/models/: __init__.py
neural_foundry/ui/: display.py
tests/: __init__.py
