[project]
name = "neural-foundry"
version = "0.1.0"
description = "Learn Claude Code through ART neural networks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "artlib",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
neural-foundry = "neural_foundry.cli:main"
nf = "neural_foundry.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neural_foundry*"]
